--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,11 +1,17 @@
 @media screen and (min-width: 600px) {
 	#toolbar {
-		// margin-top: 52px;
+		margin-top: 64px;
 	}
 }
 
-@media (min-width: 0px) and (orientation: landscape) {
+@media screen and (max-width: 600px) {
 	#toolbar {
-		// margin-top: 48px;
+		margin-top: 56px;
 	}
 }
+
+// @media (min-width: 0px) and (orientation: landscape) {
+// 	#toolbar {
+// 		margin-top: 48px;
+// 	}
+// }
